results/print-ir/expected/failure/resolver/int_plus_string.psy.out
Parsed OK
error: Invalid concatenation of string with another type.
  --> tests/failure/resolver/int_plus_string.psy:2:18
   |
  2| var dyn result = num + "cats";
   |                  ^--- Here


Semantic analysis failed. Compilation stopped.
